# fibonaci/api/swagger.yml
@@ -14,7 +14,7 @@ basePath: "/api"
 paths:
     /fibonacci/up-to-including-index:
         get:
-            operationId: "fibonaci.up_to_including_index"
+            operationId: "fibonaci.fib_api.up_to_including_index"
             tags:
                 - "/fibonacci/up-to-including-index"
             summary: "Given an index, this function return the range of Fibonacci functions up to and including the given argument."
@@ -42,7 +42,7 @@ paths:
 
     /fibonacci/up-to-value:
         get:
-            operationId: "fibonaci.up_to_value"
+            operationId: "fibonaci.fib_api.up_to_value"
             tags:
                 - "/fibonacci/up-to-value"
             summary: "Given a value, this function return the range of Fibonacci functions up to a certain value defined by the given argument."
@@ -70,7 +70,7 @@ paths:
 
     /fibonacci/for_index:
             get:
-                operationId: "fibonaci.for_index"
+                operationId: "fibonaci.fib_api.for_index"
                 tags:
                     - "/fibonacci/for_index"
                 summary: "Given an index, this function return the nth number in the Fibonacci sequence, where n is defined by the given argument."
